kubernetes_manifest/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mirror-ns
  labels:
    istio-injection: "enabled"
