kubernetes_manifest/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: mirror-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - image: thekarananand/mirror-app:v2
        name: user
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 250m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 1000Mi
