kubernetes_manifest/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: user-svc
  namespace: mirror-ns
spec:
  selector:
    app: user
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
