kubernetes_manifest/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: user-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 2001
      name: user
      protocol: HTTP
    hosts:
    - "*"
